# augment

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
conda/recipe/: meta.yaml
docs/: api.md  conf.py  index.md
examples/: example_problems.ipynb  example_readme.ipynb
logo/: logo_design.key
src/augment/: __init__.py  core.py  format.py  io.py  plot.py  stats.py
tests/: test_functions.ipynb  test_import.py
