[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "augment"
dynamic = ["version"]
description = "A Python package for propagating asymmetric uncertainties through Astropy-unit-aware Monte Carlo simulations."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Travis J. Thieme", email = "tjthieme@asiaa.sinica.edu.tw" }
]
dependencies = [
  "astropy>=7",
  "numpy>=2.3",
  "scipy>=1.15",
  "matplotlib>=3.10",
  "corner>=2.2",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/travisthieme/augment"
Repository = "https://github.com/travisthieme/augment"
Issues = "https://github.com/travisthieme/augment/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "black>=24",
]
docs = [
  "sphinx>=7",
  "furo>=2024.1.29",
  "myst-parser>=5.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
version_file = "src/augment/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]
